# 2D-and-3D-graphics

./: mainr.cpp
lab5/: CMakeLists.txt
lab7/: CMakeLists.txt
